<resources>
    <string name="app_name">MACS Transit</string>
    <string name="routematch_url" translatable="false">https://fnsb.routematch.io/feed/</string>
    <string name="macs_transit_logo">MACS Transit logo</string>

    <!-- Splash screen messages -->
    <string name="open_network_settings">Open network settings</string>
    <string name="internet_check">Checking internet connection</string>
    <string name="its_sunday">There are no buses scheduled to run at this time</string>
    <string name="cannot_connect_internet">Cannot connect to the internet</string>
    <string name="retry">Retry</string>

    <!-- Networking messages -->
    <string name="downloading_master_schedule">Downloading master schedule</string>
    <string name="parsing_master_schedule">Processing master schedule</string>
    <string name="loading_bus_stops">Downloading bus stops</string>
    <string name="mapping_bus_stops">Processing bus stops</string>
    <string name="shared_bus_stop_check">Checking for shared bus stops</string>
    <string name="stop_validation">Validating stops</string>
    <string name="routematch_timeout">RouteMatch server timed out</string>

    <!-- Stop clicked -->
    <string name="click_to_view_all_the_arrival_and_departure_times">Click to view all the arrival and departure times.</string>
    <string name="retrieving_stop_times">Retrieving stop times…</string>
    <string name="stop_times_retrieval_error">Unable to retrieve the arrival and departure times for %1$s</string>
    <string name="expected_arrival">Expected arrival: </string>
    <string name="expected_departure">Expected departure: </string>

    <!-- Menu -->
    <string name="settings">Settings</string>
    <string name="enable_night_mode">Enable dark theme</string>
    <string name="not_broadcasting">This route does not have any routes broadcasting their location</string>
    <string name="broadcasting">This route is broadcasting their location</string>
    <string name="route_menu_header">Select routes to show</string>
    <string name="select_to_open_routes_menu">Select to open routes menu</string>
    <string name="select_to_view_fares">Select to view bus fares</string>
    <string name="select_to_launch_app_settings">Select to launch app settings</string>

    <!-- Bus fares -->
    <string name="view_fares">View bus fares</string>
    <string name="bus_fares">Bus Fares</string>
    <string name="fare_category">Fare Category</string>
    <string name="adults">Adults</string>
    <string name="reduced">Reduced</string>
    <string name="cash_fare">Cash Fare</string>
    <string name="dollarfifty">$1.50</string>
    <string name="seventyfivecents">$0.75</string>
    <string name="day_pass">Day Pass</string>
    <string name="threedollars">$3.00</string>
    <string name="twodollars">$2.00</string>
    <string name="monthly_pass">Monthly Pass</string>
    <string name="fourtydollars">$40.00</string>
    <string name="twentydollars">$20.00</string>
    <string name="half_month_pass">Half Month Pass</string>
    <string name="covid19_notice">EFFECTIVE MARCH 2020\nAll MACS Transit and van tran fares for all riders are suspended</string>
    <string name="disclaimer">Last updated November 26th, 2025. Prices may be inaccurate. Please refer to the official MACS website for more details on pricing.</string>
    <string name="macs_website">MACS Website</string>
    <string name="close">Close</string>

    <!-- Settings -->
    <string name="enable_traffic_view">Enable traffic view</string>
    <string name="launch_with_night_mode">Launch with dark theme by default</string>
    <string name="show_polylines">Show polylines for routes</string>
    <string name="enable_street_view">Enable Street view\n(Tap and hold on info window)</string>
    <string name="default_map_type">Default map type:</string>
    <string name="favorited_routes">Favorited routes:</string>
    <string name="normal_map">Normal (Default)</string>
    <string name="satellite_map">Satellite</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="terrain_map">Terrain</string>
    <string name="favorite_routes_explanation">Selected favorited routes will be pre-selected upon app startup.</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
</resources>
