<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_header"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/traffic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/enable_traffic_view"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/night_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/launch_with_night_mode"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/polylines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/show_polylines"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/VR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/secret_VR"
                android:enabled="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_map_type"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/traffic_view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/map_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/normal_map"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/normal_map"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:buttonTint="@color/white"/>

                    <RadioButton
                        android:id="@+id/satellite_map"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/satellite_map"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:buttonTint="@color/white"/>

                    <RadioButton
                        android:id="@+id/terrain_map"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terrain_map"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:buttonTint="@color/white"/>

                </RadioGroup>

            </LinearLayout>


            <TextView
                android:id="@+id/favorite_route_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:text="@string/favorited_routes"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/favorite_route_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancel"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/apply"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>